--- a/index.html
+++ b/index.html
@@ -321,5 +321,23 @@
         </div>
     </div>    
     </footer>
+    <!-- Modal form-->
+    <div class="backdrop">
+    <div class="modal">
+    <button type="button" class="modal-btn">
+        <svg class="modal-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1-1">
+            </use>
+        </svg>
+    </button>
+    <p class="modal-title">Leave your contacts and we will call you back</p>
+    <form class="modal-form">
+        <input type="" class="modal-input">
+        <input type="" class="modal-input">
+        <input type="" class="modal-input">
+        
+    </form>
+    </div>
+    </div>
 </body>
 </html>
