--- a/index.html
+++ b/index.html
@@ -363,6 +363,13 @@
             <label for="user-text" class="modal-label">Comment</label>
             <textarea name="user-text" id="user-text" class="modal-textarea" placeholder="Text input"></textarea>
             </div>
+        <div class="modal-field">
+            <input class="modal-check visualy-hidden" type="checkbox" name="terms" id="terms">
+            <label class="check-text" for="terms"><span class="check-text-box">
+                <svg class="check-text-icon" width="10" height="8">
+                    <use href="./images/icons.svg#icon-Vector-1"></use>
+                </svg>
+            </span> I accept the terms and conditions of the <a href="">Privacy Policy</a></label>
         </div>
         <button type="submit" class="modal-form-btn">Send</button>
     </form>
