--- a/index.html
+++ b/index.html
@@ -319,10 +319,22 @@
                     </li>
             </ul>
         </div>
+        <div class="footer-bottom">
+            <form class="footer-form">
+                <p class="footer-form-title">Subscribe</p>
+                <input class="footer-form-input" type="email" name="footer-email" placeholder="E-mail">
+                <button type="submit" class="footer-form-btn">Subscribe 
+                    <svg class="footer-form-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-Frame-3-1"></use>
+                    </svg>
+                </button>
+            </form>
+
+        </div>
     </div>    
     </footer>
     <!-- Modal form-->
-    <div class="backdrop is-open">
+    <div class="backdrop">
     <div class="modal">
     <button type="button" class="modal-btn">
         <svg class="modal-btn-icon" width="8" height="8">
@@ -336,7 +348,7 @@
                 <label for="user-name" class="modal-label">Name</label>
                 <div class="input-wrap">
                     <input type="text" name="user-name" class="modal-input" id="user-name">
-                    <svg class="modal-icon" width="18" height="18">
+                    <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-person-black"></use>
                     </svg>
                 </div>
@@ -360,16 +372,16 @@
             </div>
         </div>
         <div class="modal-field">
-            <label for="user-text" class="modal-label">Comment</label>
-            <textarea name="user-text" id="user-text" class="modal-textarea" placeholder="Text input"></textarea>
+            <label for="user-comment" class="modal-label">Comment</label>
+            <textarea name="user-comment" id="user-comment" class="modal-textarea" placeholder="Text input"></textarea>
             </div>
         <div class="modal-field">
-            <input class="modal-check visualy-hidden" type="checkbox" name="terms" id="terms">
-            <label class="check-text" for="terms"><span class="check-text-box">
+            <input class="modal-check visualy-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true">
+            <label class="check-text" for="user-privacy"><span class="check-text-box">
                 <svg class="check-text-icon" width="10" height="8">
                     <use href="./images/icons.svg#icon-Vector-1"></use>
                 </svg>
-            </span> I accept the terms and conditions of the <a href="">Privacy Policy</a></label>
+            </span> I accept the terms and conditions of the <a href="" class="check-text-privacy">Privacy Policy</a></label>
         </div>
         <button type="submit" class="modal-form-btn">Send</button>
     </form>
