--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
             </ul>
         </div>
         <div class="footer-bottom">
+            <p class="footer-form-title">Subscribe</p>
             <form class="footer-form">
-                <p class="footer-form-title">Subscribe</p>
                 <input class="footer-form-input" type="email" name="footer-email" placeholder="E-mail">
                 <button type="submit" class="footer-form-btn">Subscribe 
                     <svg class="footer-form-icon" width="24" height="24">
@@ -329,7 +329,6 @@
                     </svg>
                 </button>
             </form>
-
         </div>
     </div>    
     </footer>
@@ -376,7 +375,7 @@
             <textarea name="user-comment" id="user-comment" class="modal-textarea" placeholder="Text input"></textarea>
             </div>
         <div class="modal-field">
-            <input class="modal-check visualy-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true">
+            <input class="modal-check visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true">
             <label class="check-text" for="user-privacy"><span class="check-text-box">
                 <svg class="check-text-icon" width="10" height="8">
                     <use href="./images/icons.svg#icon-Vector-1"></use>
