--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!--Basic principles-->
         <section class="aside">
             <div class="container">
-            <h2 class="visualy-hidden" hidden>Principles</h2>
+            <h2 class="visually-hidden" hidden>Principles</h2>
         <ul class="aside-list">
         <li class="aside-item"> 
             <div class="aside-item-box">
@@ -322,7 +322,9 @@
         <div class="footer-bottom">
             <p class="footer-form-title">Subscribe</p>
             <form class="footer-form">
+                <label class="footer-label">
                 <input class="footer-form-input" type="email" name="footer-email" placeholder="E-mail">
+                </label>
                 <button type="submit" class="footer-form-btn">Subscribe 
                     <svg class="footer-form-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-Frame-3-1"></use>
@@ -370,11 +372,11 @@
                 </svg>
             </div>
         </div>
-        <div class="modal-field">
+        <div class="modal-field-comment">
             <label for="user-comment" class="modal-label">Comment</label>
             <textarea name="user-comment" id="user-comment" class="modal-textarea" placeholder="Text input"></textarea>
             </div>
-        <div class="modal-field">
+        <div class="modal-field-check">
             <input class="modal-check visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true">
             <label class="check-text" for="user-privacy"><span class="check-text-box">
                 <svg class="check-text-icon" width="10" height="8">
